feat(media): Implement comprehensive media attachment infrastructure
- Add MediaValidator for file type and size validation
- Enhance ChatAttachment interface with metadata fields
- Create UploadProgress and MediaUploadResult data classes
- Update SupabaseChatService to support attachment messages
- Implement MediaPickerBottomSheet for media selection
- Add layout modifications for media-related UI components
- Update task tracking for media attachment implementation
Completes core infrastructure for enhanced media attachment functionality across chat messaging system, supporting multiple media types and comprehensive validation.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -395,4 +395,12 @@ Please explain the following message from %3$s in detail, considering the contex
     
     <!-- Typing Indicator -->
     <string name="typing_indicator_text">is typing</string>
+
+    <!-- Media Picker -->
+    <string name="media_picker_title">Select Media Type</string>
+    <string name="media_picker_option_photos">Photos</string>
+    <string name="media_picker_option_videos">Videos</string>
+    <string name="media_picker_option_audio">Audio</string>
+    <string name="media_picker_option_documents">Documents</string>
+    <string name="media_picker_option_icon">Media option icon</string>
 </resources>
