feat(post-cards): Implement Material Design 3 post card system
- Replace enhanced home feed UI specs with MD3 post card specifications
- Add comprehensive post card design, requirements, and task documentation
- Implement new PostCardAnimations for smooth interaction effects
- Update PostsAdapter to support new Material Design 3 card layout
- Add new post card layout (item_post_md3.xml) with improved styling
- Introduce post card state list animator for elevation and interaction states
- Update themes, dimensions, and styles to support MD3 post card design
- Add UI and unit tests for post card animations and interactions
- Include accessibility documentation for new post card implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -426,6 +426,20 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="image_downloaded">Image saved to gallery</string>
     <string name="failed_to_download_image">Failed to download image</string>
     <string name="loading_image">Loading image…</string>
+    
+    <!-- MD3 Post Card Accessibility Strings -->
+    <string name="author_avatar">Author profile picture</string>
+    <string name="post_options">More options for post</string>
+    <string name="post_image">Post image</string>
+    <string name="like_post">Like post</string>
+    <string name="like_post_with_count">Like post, %1$d likes</string>
+    <string name="like_post_liked">Unlike post, %1$d likes</string>
+    <string name="comment_on_post">Comment on post</string>
+    <string name="comment_on_post_with_count">Comment on post, %1$d comments</string>
+    <string name="share_post">Share post</string>
+    <string name="post_by_user">Post by %1$s</string>
+    <string name="post_timestamp">Posted %1$s</string>
+    
     <string name="downloading_image">Downloading…</string>
 
     <!-- Video Player -->
@@ -452,4 +466,5 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="open_document">Open document</string>
     <string name="document_downloaded">Document saved</string>
     <string name="failed_to_download_document">Failed to download document</string>
+
 </resources>
