--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -517,4 +517,37 @@ Please explain the following message from %3$s in detail, considering the contex
     <!-- Message Deletion Loading Messages -->
     <string name="loading_deletion">Deleting messages…</string>
 
+    <!-- Connection Status -->
+    <string name="connection_status_connected">Connected</string>
+    <string name="connection_status_connecting">Connecting…</string>
+    <string name="connection_status_disconnected">No connection</string>
+    <string name="connection_status_reconnecting">Reconnecting…</string>
+    <string name="connection_type_wifi">Wi-Fi</string>
+    <string name="connection_type_cellular">Mobile data</string>
+    <string name="connection_type_ethernet">Ethernet</string>
+    <string name="connection_retry">Retry</string>
+
+    <!-- Loading States -->
+    <string name="loading_messages">Loading messages…</string>
+    <string name="loading_profile">Loading profile…</string>
+    <string name="loading_posts">Loading posts…</string>
+    <string name="loading_comments">Loading comments…</string>
+    <string name="sending_message">Sending…</string>
+    <string name="message_sent">Sent</string>
+
+    <!-- Pull to Refresh -->
+    <string name="pull_to_refresh_messages">Pull to refresh messages</string>
+    <string name="release_to_refresh">Release to refresh</string>
+    <string name="refreshing">Refreshing…</string>
+
+    <!-- Haptic Feedback Settings -->
+    <string name="haptic_feedback_title">Haptic feedback</string>
+    <string name="haptic_feedback_subtitle">Vibrate on interactions</string>
+
+    <!-- Smooth Animations -->
+    <string name="animations_title">Animations</string>
+    <string name="animations_subtitle">Enable smooth transitions</string>
+    <string name="reduce_animations_title">Reduce animations</string>
+    <string name="reduce_animations_subtitle">Minimize motion for accessibility</string>
+
 </resources>
