feat(chat-ui): Implement inline reply preview with Material Design 3 styling
- Add new design for inline reply preview container
- Modify message input layout to integrate reply preview
- Create new drawable for message input container background
- Update ChatActivity to support inline reply preview functionality
- Implement smooth show/hide animations for reply preview
- Add design specifications for reply preview UI
- Update layout files to support new inline reply design
- Enhance message input container with rounded corners and elevation
Improves user interaction by creating a more cohesive and visually appealing reply experience with seamless integration and modern design principles.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -550,4 +550,8 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="reduce_animations_title">Reduce animations</string>
     <string name="reduce_animations_subtitle">Minimize motion for accessibility</string>
 
+    <!-- Inline Reply Accessibility -->
+    <string name="cancel_reply">Cancel reply</string>
+    <string name="replying_to">Replying to %s</string>
+
 </resources>
