refactor(chat-ui): Enhance reply preview layout and component naming
- Refactor chat reply layout with improved Material Design styling
- Update component IDs for better semantic clarity and consistency
- Modify XML layout to use constraint layout and improve visual hierarchy
- Add new drawable for reply indicator with dynamic color support
- Standardize naming conventions across chat UI components
- Improve layout responsiveness and readability

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -553,5 +553,6 @@ Please explain the following message from %3$s in detail, considering the contex
     <!-- Inline Reply Accessibility -->
     <string name="cancel_reply">Cancel reply</string>
     <string name="replying_to">Replying to %s</string>
+    <string name="reply_media_preview">Reply media preview</string>
 
 </resources>
