feat: Add SettingsActivity with Material 3 design
- Create SettingsActivity.kt with ViewBinding (no findViewById)
- Add activity_settings.xml with CoordinatorLayout and MaterialToolbar
- Add reusable item_setting_row.xml component
- Add navigation to ProfileEditActivity, ChatPrivacySettingsActivity
- Add system notification settings navigation
- Add logout functionality using AuthRepository
- Add required drawable icons (chevron_right, notifications, logout)
- Register activity in AndroidManifest.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -577,4 +577,13 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="youtube_url_hint">https://youtube.com/watch?v=…</string>
     <string name="location_name_hint">Enter location name</string>
 
+    <!-- Settings -->
+    <string name="settings_account">Account</string>
+    <string name="settings_account_subtitle">Edit your profile</string>
+    <string name="settings_privacy">Privacy</string>
+    <string name="settings_privacy_subtitle">Chat privacy settings</string>
+    <string name="settings_notifications">Notifications</string>
+    <string name="settings_notifications_subtitle">Manage notification preferences</string>
+    <string name="settings_logout">Log out</string>
+
 </resources>
