--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -577,6 +577,42 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="youtube_url_hint">https://youtube.com/watch?v=…</string>
     <string name="location_name_hint">Enter location name</string>
 
+    <!-- Post Detail -->
+    <string name="post_detail_title">Post</string>
+    <string name="comments_title">Comments</string>
+    <string name="comments_count">%d comments</string>
+    <string name="no_comments">No comments yet. Be the first to comment!</string>
+    <string name="comment_hint">Write a comment…</string>
+    <string name="reply_hint">Reply to %s…</string>
+    <string name="author_badge">Author</string>
+    <string name="edited_indicator">Edited</string>
+    <string name="deleted_comment">[Deleted]</string>
+    <string name="view_replies">View %d replies</string>
+    <string name="hide_replies">Hide replies</string>
+    <string name="reaction_like">Like</string>
+    <string name="reaction_love">Love</string>
+    <string name="reaction_haha">Haha</string>
+    <string name="reaction_wow">Wow</string>
+    <string name="reaction_sad">Sad</string>
+    <string name="reaction_angry">Angry</string>
+    <string name="poll_ended">Poll ended</string>
+    <string name="poll_ends_in">Ends in %s</string>
+    <string name="vote_count">%d votes</string>
+    <string name="bookmark_added">Post saved</string>
+    <string name="bookmark_removed">Post removed from saved</string>
+    <string name="reshare_title">Reshare post</string>
+    <string name="reshare_hint">Add a comment (optional)</string>
+    <string name="report_title">Report post</string>
+    <string name="report_submitted">Report submitted</string>
+    <string name="comment">Comment</string>
+    <string name="share">Share</string>
+    <string name="reply">Reply</string>
+    <string name="more_options">More options</string>
+    <string name="replying_to">Replying to %s</string>
+    <string name="media">Media</string>
+    <string name="play_video">Play video</string>
+    <string name="private_visibility">Private</string>
+
     <!-- Settings -->
     <string name="settings_account">Account</string>
     <string name="settings_account_subtitle">Edit your profile</string>
