Refactor post options menu to dynamic state-aware system
- Add PostActionItem data class for menu items
- Create PostOptionsAdapter with RecyclerView implementation
- Update bottom_sheet_post_options.xml with RecyclerView
- Add item_post_option.xml layout for menu items
- Implement dynamic menu generation based on owner/viewer state
- Add destructive action styling (red tint for Delete, Block, Report)
- Maintain existing dialog behavior and styling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,6 +340,30 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="delete_for_everyone">Delete for everyone</string>
     <string name="delete_for_everyone_explanation">This message will be removed for all participants in this conversation. This action cannot be undone.</string>
     <string name="delete">Delete</string>
+    <string name="comment_options">Comment Options</string>
+    <string name="hide_comment">Hide Comment</string>
+    <string name="pin_comment">Pin Comment</string>
+    <string name="unpin_comment">Unpin Comment</string>
+    <string name="report_comment">Report Comment</string>
+    <string name="comment_hidden">Comment hidden</string>
+    <string name="comment_pinned">Comment pinned</string>
+    <string name="comment_unpinned">Comment unpinned</string>
+    <string name="comment_reported">Comment reported</string>
+    <string name="comment_deleted">Comment deleted</string>
+    <string name="comment_edited">Comment edited</string>
+    <string name="comment_copied">Comment copied</string>
+    <string name="select_report_reason">Select a reason</string>
+    <string name="report_reason_spam">Spam</string>
+    <string name="report_reason_harassment">Harassment</string>
+    <string name="report_reason_hate_speech">Hate Speech</string>
+    <string name="report_reason_violence">Violence</string>
+    <string name="report_reason_misinformation">Misinformation</string>
+    <string name="report_reason_other">Other</string>
+    <string name="report_description_hint">Additional details (optional)</string>
+    <string name="delete_comment">Delete Comment</string>
+    <string name="edit_comment">Edit Comment</string>
+    <string name="save">Save</string>
+    <string name="deleted_comment">[deleted]</string>
     <string name="message_deleted_successfully">Message deleted successfully</string>
     <string name="failed_to_delete_message">Failed to delete message. Please try again.</string>
     
