--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -644,4 +644,264 @@ Please explain the following message from %3$s in detail, considering the contex
     <string name="settings_notifications_subtitle">Manage notification preferences</string>
     <string name="settings_logout">Log out</string>
 
+    <!-- Settings Hub -->
+    <string name="settings_hub_title">Settings</string>
+    <string name="settings_hub_back">Back</string>
+    
+    <!-- Settings Categories -->
+    <string name="settings_category_account">Account</string>
+    <string name="settings_category_account_subtitle">Manage your account and profile</string>
+    <string name="settings_category_privacy_security">Privacy &amp; Security</string>
+    <string name="settings_category_privacy_security_subtitle">Control who can see your content</string>
+    <string name="settings_category_appearance">Appearance</string>
+    <string name="settings_category_appearance_subtitle">Theme, colors, and display</string>
+    <string name="settings_category_notifications">Notifications</string>
+    <string name="settings_category_notifications_subtitle">Manage notification preferences</string>
+    <string name="settings_category_chat">Chat Settings</string>
+    <string name="settings_category_chat_subtitle">Configure messaging behavior</string>
+    <string name="settings_category_storage">Storage &amp; Data</string>
+    <string name="settings_category_storage_subtitle">Manage app storage and data usage</string>
+    <string name="settings_category_language">Language &amp; Region</string>
+    <string name="settings_category_language_subtitle">Set language preferences</string>
+    <string name="settings_category_about">About &amp; Support</string>
+    <string name="settings_category_about_subtitle">App info and help resources</string>
+    
+    <!-- Account Settings -->
+    <string name="account_settings_title">Account</string>
+    <string name="account_settings_edit_profile">Edit Profile</string>
+    <string name="account_settings_edit_profile_subtitle">Update your profile information</string>
+    <string name="account_settings_change_email">Change Email</string>
+    <string name="account_settings_change_email_subtitle">Update your email address</string>
+    <string name="account_settings_change_password">Change Password</string>
+    <string name="account_settings_change_password_subtitle">Update your password</string>
+    <string name="account_settings_linked_accounts">Linked Accounts</string>
+    <string name="account_settings_linked_accounts_subtitle">Manage social account connections</string>
+    <string name="account_settings_delete_account">Delete Account</string>
+    <string name="account_settings_delete_account_subtitle">Permanently delete your account</string>
+    <string name="account_settings_connect">Connect</string>
+    <string name="account_settings_disconnect">Disconnect</string>
+    <string name="account_settings_google">Google</string>
+    <string name="account_settings_facebook">Facebook</string>
+    <string name="account_settings_apple">Apple</string>
+    
+    <!-- Change Email Dialog -->
+    <string name="change_email_dialog_title">Change Email</string>
+    <string name="change_email_dialog_message">Enter your new email address and current password to verify the change.</string>
+    <string name="change_email_new_email">New Email</string>
+    <string name="change_email_new_email_placeholder">email@example.com</string>
+    <string name="change_email_current_password">Current Password</string>
+    <string name="change_email_current_password_placeholder">Enter your password</string>
+    <string name="change_email_button">Change Email</string>
+    <string name="change_email_success">Email changed successfully</string>
+    <string name="change_email_error">Failed to change email</string>
+    
+    <!-- Change Password Dialog -->
+    <string name="change_password_dialog_title">Change Password</string>
+    <string name="change_password_dialog_message">Enter your current password and choose a new password.</string>
+    <string name="change_password_current">Current Password</string>
+    <string name="change_password_new">New Password</string>
+    <string name="change_password_confirm">Confirm New Password</string>
+    <string name="change_password_button">Change Password</string>
+    <string name="change_password_success">Password changed successfully</string>
+    <string name="change_password_error">Failed to change password</string>
+    <string name="change_password_mismatch">Passwords do not match</string>
+    <string name="change_password_weak">Password is too weak</string>
+    <string name="change_password_strength_weak">Weak</string>
+    <string name="change_password_strength_medium">Medium</string>
+    <string name="change_password_strength_strong">Strong</string>
+    
+    <!-- Delete Account Dialog -->
+    <string name="delete_account_dialog_title">Delete Account</string>
+    <string name="delete_account_dialog_message">This action cannot be undone. All your data, posts, messages, and profile information will be permanently deleted.</string>
+    <string name="delete_account_confirmation_phrase">DELETE MY ACCOUNT</string>
+    <string name="delete_account_confirmation_label">Confirmation</string>
+    <string name="delete_account_confirmation_placeholder">Type the phrase above</string>
+    <string name="delete_account_button">Delete Account</string>
+    <string name="delete_account_success">Account deleted successfully</string>
+    <string name="delete_account_error">Failed to delete account</string>
+    
+    <!-- Privacy & Security Settings -->
+    <string name="privacy_security_title">Privacy &amp; Security</string>
+    <string name="privacy_section_profile">Profile Privacy</string>
+    <string name="privacy_profile_visibility">Profile Visibility</string>
+    <string name="privacy_profile_visibility_subtitle">Control who can see your profile</string>
+    <string name="privacy_visibility_public">Public</string>
+    <string name="privacy_visibility_followers">Followers Only</string>
+    <string name="privacy_visibility_private">Private</string>
+    <string name="privacy_content_visibility">Content Visibility</string>
+    <string name="privacy_content_visibility_subtitle">Control who can see your posts</string>
+    <string name="privacy_content_everyone">Everyone</string>
+    <string name="privacy_content_followers">Followers</string>
+    <string name="privacy_content_only_me">Only Me</string>
+    <string name="privacy_section_security">Security</string>
+    <string name="privacy_two_factor">Two-Factor Authentication</string>
+    <string name="privacy_two_factor_subtitle">Add an extra layer of security</string>
+    <string name="privacy_biometric_lock">Biometric Lock</string>
+    <string name="privacy_biometric_lock_subtitle">Use fingerprint or face to unlock</string>
+    <string name="privacy_section_blocking">Blocking</string>
+    <string name="privacy_blocked_users">Blocked Users</string>
+    <string name="privacy_blocked_users_subtitle">Manage blocked accounts</string>
+    <string name="privacy_muted_users">Muted Users</string>
+    <string name="privacy_muted_users_subtitle">Manage muted accounts</string>
+    <string name="privacy_active_sessions">Active Sessions</string>
+    <string name="privacy_active_sessions_subtitle">Manage logged-in devices</string>
+    
+    <!-- Appearance Settings -->
+    <string name="appearance_title">Appearance</string>
+    <string name="appearance_theme_mode">Theme</string>
+    <string name="appearance_theme_mode_subtitle">Choose your preferred theme</string>
+    <string name="appearance_theme_light">Light</string>
+    <string name="appearance_theme_dark">Dark</string>
+    <string name="appearance_theme_system">System Default</string>
+    <string name="appearance_dynamic_color">Dynamic Color</string>
+    <string name="appearance_dynamic_color_subtitle">Use colors from your wallpaper</string>
+    <string name="appearance_font_size">Font Size</string>
+    <string name="appearance_font_size_subtitle">Adjust text size</string>
+    <string name="appearance_font_small">Small</string>
+    <string name="appearance_font_medium">Medium</string>
+    <string name="appearance_font_large">Large</string>
+    <string name="appearance_font_extra_large">Extra Large</string>
+    <string name="appearance_font_preview">Preview: The quick brown fox jumps over the lazy dog</string>
+    <string name="appearance_chat_customization">Chat Customization</string>
+    <string name="appearance_chat_customization_subtitle">Customize chat bubbles and backgrounds</string>
+    
+    <!-- Notification Settings -->
+    <string name="notification_settings_title">Notifications</string>
+    <string name="notification_section_activity">Activity</string>
+    <string name="notification_likes">Likes</string>
+    <string name="notification_likes_subtitle">When someone likes your post</string>
+    <string name="notification_comments">Comments</string>
+    <string name="notification_comments_subtitle">When someone comments on your post</string>
+    <string name="notification_follows">Follows</string>
+    <string name="notification_follows_subtitle">When someone follows you</string>
+    <string name="notification_messages">Messages</string>
+    <string name="notification_messages_subtitle">When you receive a new message</string>
+    <string name="notification_mentions">Mentions</string>
+    <string name="notification_mentions_subtitle">When someone mentions you</string>
+    <string name="notification_section_preferences">Preferences</string>
+    <string name="notification_sound">Notification Sound</string>
+    <string name="notification_sound_subtitle">Choose notification sound</string>
+    <string name="notification_dnd">Do Not Disturb</string>
+    <string name="notification_dnd_subtitle">Set quiet hours</string>
+    <string name="notification_in_app">In-App Notifications</string>
+    <string name="notification_in_app_subtitle">Show notifications within the app</string>
+    
+    <!-- Chat Settings -->
+    <string name="chat_settings_title_new">Chat Settings</string>
+    <string name="chat_read_receipts">Read Receipts</string>
+    <string name="chat_read_receipts_subtitle">Show when messages are read</string>
+    <string name="chat_typing_indicators">Typing Indicators</string>
+    <string name="chat_typing_indicators_subtitle">Show when you\'re typing</string>
+    <string name="chat_media_auto_download">Media Auto-Download</string>
+    <string name="chat_media_auto_download_subtitle">Automatically download media</string>
+    <string name="chat_media_wifi_only">WiFi Only</string>
+    <string name="chat_media_always">Always</string>
+    <string name="chat_media_never">Never</string>
+    <string name="chat_message_requests">Message Requests</string>
+    <string name="chat_message_requests_subtitle">Pending messages from non-followers</string>
+    <string name="chat_privacy">Chat Privacy</string>
+    <string name="chat_privacy_subtitle">Advanced chat privacy settings</string>
+    
+    <!-- Storage & Data Settings -->
+    <string name="storage_data_title">Storage &amp; Data</string>
+    <string name="storage_section_usage">Storage Usage</string>
+    <string name="storage_cache_size">Cache Size</string>
+    <string name="storage_cache_size_value">%1$s MB</string>
+    <string name="storage_clear_cache">Clear Cache</string>
+    <string name="storage_clearing_cache">Clearing…</string>
+    <string name="storage_cache_cleared">Cache cleared: %1$s MB freed</string>
+    <string name="storage_total_usage">Total App Storage</string>
+    <string name="storage_total_usage_value">%1$s MB</string>
+    <string name="storage_section_data">Data Settings</string>
+    <string name="storage_data_saver">Data Saver</string>
+    <string name="storage_data_saver_subtitle">Reduce data usage</string>
+    <string name="storage_section_configuration">Configuration</string>
+    <string name="storage_provider_config">Storage Provider Configuration</string>
+    <string name="storage_provider_config_subtitle">Configure image and file storage</string>
+    <string name="storage_ai_config">AI Configuration</string>
+    <string name="storage_ai_config_subtitle">Configure AI provider settings</string>
+    
+    <!-- Language & Region Settings -->
+    <string name="language_region_title">Language &amp; Region</string>
+    <string name="language_current">Current Language</string>
+    <string name="language_available">Available Languages</string>
+    <string name="language_english">English</string>
+    <string name="language_spanish">Español</string>
+    <string name="language_french">Français</string>
+    <string name="language_german">Deutsch</string>
+    <string name="language_japanese">日本語</string>
+    <string name="language_chinese">中文</string>
+    <string name="language_korean">한국어</string>
+    <string name="language_portuguese">Português</string>
+    <string name="language_russian">Русский</string>
+    <string name="language_arabic">العربية</string>
+    <string name="language_region_preferences">Region Preferences</string>
+    <string name="language_region_preferences_subtitle">Date and time format settings</string>
+    
+    <!-- About & Support Settings -->
+    <string name="about_support_title">About &amp; Support</string>
+    <string name="about_app_info">App Information</string>
+    <string name="about_version">Version</string>
+    <string name="about_build">Build</string>
+    <string name="about_copyright">© 2024 Synapse. All rights reserved.</string>
+    <string name="about_section_legal">Legal</string>
+    <string name="about_terms">Terms of Service</string>
+    <string name="about_terms_subtitle">Read our terms and conditions</string>
+    <string name="about_privacy_policy">Privacy Policy</string>
+    <string name="about_privacy_policy_subtitle">How we handle your data</string>
+    <string name="about_section_support">Support</string>
+    <string name="about_help_center">Help Center</string>
+    <string name="about_help_center_subtitle">FAQs and support resources</string>
+    <string name="about_report_problem">Report a Problem</string>
+    <string name="about_report_problem_subtitle">Send us feedback</string>
+    <string name="about_check_updates">Check for Updates</string>
+    <string name="about_check_updates_subtitle">See if a new version is available</string>
+    <string name="about_licenses">Open Source Licenses</string>
+    <string name="about_licenses_subtitle">Third-party library attributions</string>
+    
+    <!-- Feedback Dialog -->
+    <string name="feedback_dialog_title">Report a Problem</string>
+    <string name="feedback_dialog_message">Help us improve by describing the issue you\'re experiencing.</string>
+    <string name="feedback_category">Category</string>
+    <string name="feedback_category_bug">Bug Report</string>
+    <string name="feedback_category_feature">Feature Request</string>
+    <string name="feedback_category_other">Other</string>
+    <string name="feedback_description">Description</string>
+    <string name="feedback_description_placeholder">Describe the issue or suggestion…</string>
+    <string name="feedback_submit">Submit</string>
+    <string name="feedback_submitting">Submitting…</string>
+    <string name="feedback_success">Feedback submitted successfully</string>
+    <string name="feedback_error">Failed to submit feedback</string>
+    
+    <!-- Common Settings Actions -->
+    <string name="settings_dismiss">Dismiss</string>
+    <string name="settings_cancel">Cancel</string>
+    <string name="settings_save">Save</string>
+    <string name="settings_done">Done</string>
+    <string name="settings_loading">Loading…</string>
+    <string name="settings_error">Error</string>
+    <string name="settings_success">Success</string>
+    
+    <!-- Settings Error Messages -->
+    <string name="settings_error_load_profile">Failed to load profile</string>
+    <string name="settings_error_save_settings">Failed to save settings</string>
+    <string name="settings_error_network">Network error. Please check your connection.</string>
+    <string name="settings_error_generic">Something went wrong. Please try again.</string>
+    <string name="settings_error_permission">Permission denied</string>
+    <string name="settings_error_invalid_input">Invalid input</string>
+    
+    <!-- Accessibility Descriptions -->
+    <string name="settings_icon_description">Settings icon</string>
+    <string name="settings_back_description">Navigate back</string>
+    <string name="settings_profile_avatar_description">Profile picture</string>
+    <string name="settings_category_icon_description">Category icon</string>
+    <string name="settings_chevron_description">Navigate to details</string>
+    <string name="settings_toggle_description">Toggle setting</string>
+    <string name="settings_dropdown_description">Select option</string>
+    <string name="settings_slider_description">Adjust value</string>
+    <string name="settings_loading_description">Loading content</string>
+    <string name="settings_error_icon_description">Error indicator</string>
+    <string name="settings_success_icon_description">Success indicator</string>
+    <string name="settings_warning_icon_description">Warning indicator</string>
+
 </resources>
