feat: complete profile-compose-migration Phase 1 and Task 2.1
- Update Compose BOM to 2024.12.00
- Add Coil Compose 2.7.0 for image loading
- Create ProfileTheme.kt with dimensions and typography
- Add profile dimensions to dimens.xml
- Add profile screen strings to strings.xml

Phase 1 (Foundation & Architecture) complete:
- Data models (UserProfile, LinkedAccount, etc.)
- Repository layer (ProfileRepository, ProfileRepositoryImpl)
- Use cases (GetProfile, UpdateProfile, Follow/Unfollow, GetContent)
- UI state management (ProfileUiState, ProfileAction, ProfileContentFilter)
- ViewModel (ProfileViewModel with StateFlow)

Task 2.1 (Theme & Design System) complete

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -911,5 +911,15 @@ Please explain the following message from %3$s in detail, considering the contex
     </plurals>
     <string name="poll_vote_submitted">Vote submitted</string>
     <string name="poll_vote_failed">Failed to vote: %1$s</string>
+    
+    <!-- Profile Screen Strings -->
+    <string name="profile_photos">Photos</string>
+    <string name="profile_posts">Posts</string>
+    <string name="profile_reels">Reels</string>
+    <string name="profile_more">More</string>
+    <string name="profile_loading_error">Failed to load profile</string>
+    <string name="profile_empty_photos">No photos yet</string>
+    <string name="profile_empty_posts">No posts yet</string>
+    <string name="profile_empty_reels">No reels yet</string>
 
 </resources>
